paragraph overflow problem solved

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,7 @@ $background: black;
 
 p {
   display: inline-block;
+  overflow-wrap: break-word;
 }
 
 .flex {
